--- a/src/components/ReferencePanel/ReferencePanel.module.css
+++ b/src/components/ReferencePanel/ReferencePanel.module.css
@@ -56,6 +56,7 @@
 .title {
   font: var(--heading-alternate);
   color: var(--color-text);
+  letter-spacing: var(--font-spacing);
 }
 
 .closeButton {
